WIP. I don't know how the hell to get modules to work
Relates to #65